[gd_scene load_steps=5 format=3 uid="uid://b3uyy84wd61aw"]

[ext_resource type="Texture2D" uid="uid://5l7bukxy4w8l" path="res://Textures/placeholder_cannon.png" id="1_rb17f"]
[ext_resource type="Script" path="res://Cannon/cannon.gd" id="1_u2lvf"]
[ext_resource type="Script" path="res://States/finite_state_machine.gd" id="2_sr6jt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yie4x"]
size = Vector2(60, 60)

[node name="Cannon" type="Node2D"]
script = ExtResource("1_u2lvf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(73, 0)
texture = ExtResource("1_rb17f")

[node name="PlacementArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlacementArea"]
shape = SubResource("RectangleShape2D_yie4x")

[node name="AreaHighlighter" type="ColorRect" parent="."]
visible = false
offset_left = -103.0
offset_top = -30.0
offset_right = -43.0
offset_bottom = 30.0
color = Color(1, 0, 0, 0.470588)

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("2_sr6jt")
